webp feature successfully added and working with no errors